--- a/personal_page/src/theme.css
+++ b/personal_page/src/theme.css
@@ -1,17 +1,45 @@
+/* Light Mode */
 body.light-mode {
-    background-color: #f5f5f5;
+    background-color: #f0f0f0;
     color: #333;
   }
   
-  body.light-mode .container {
+  .light-mode .container {
     background-color: #fff;
+    color: #333;
   }
   
+  /* Dark Mode */
   body.dark-mode {
-    background-color: #1e1e1e;
-    color: #e0e0e0;
+    background-color: #2e2e2e;
+    color: #ccc;
   }
   
-  body.dark-mode .container {
-    background-color: #292929;
+  .dark-mode .container {
+    background-color: #3e3e3e;
+    color: #ccc;
   }
+  
+  .dark-mode a {
+    color: #ffcc00;
+  }
+  
+  .dark-mode .btn {
+    background-color: #555;
+    border-color: #555;
+    color: #fff;
+  }
+  
+  .dark-mode .btn:hover {
+    background-color: #666;
+    border-color: #666;
+    color: #fff;
+  }
+  
+  /* Toggle Switch */
+  .switch-container {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
+  
